--- a/login.css
+++ b/login.css
@@ -12,7 +12,7 @@ body {
     height: 100vh;
     width: 100%;
     overflow: hidden;
-    background: linear-gradient(90deg, #1b67b3, #1379df);
+    background: linear-gradient(180deg, #057aee, #032f5c);
 }
 
 .box {
@@ -34,8 +34,9 @@ body {
 
 .box h1 {
     color: #fff;
-    font-size: 3rem;
+    font-size: 2rem;
     user-select: none;
+    text-transform: uppercase;
 }
 
 .box input[type="text"],
@@ -73,5 +74,4 @@ body {
 .box input[type="submit"]:hover {
     background-color: #2ecc71;
     border-color: #2ecc71;
-
 }
